--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Project7\\Pro1",
         "Project8\\Pro2",
         "Project7.2\\Pro1",
-        "Project7.2\\Pro2_No"
+        "Project7.2\\Pro2_No",
+        "Project8\\Pro3"
     ]
 }
