--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Project8\\Pro2",
         "Project7.2\\Pro1",
         "Project7.2\\Pro2_No",
-        "Project8\\Pro3"
+        "Project8\\Pro3",
+        "Project8\\Pro4"
     ]
 }
